# gem-lasso

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  render_tables.py  run_synthetic.py  scenarios.py
docs/: algorithm.md  benchmarks.md  development.md  index.md  model_selection.md  provenance.md  release.md
docs/tex/: main.tex  references.bib
examples/: README.md  basic_penalized_em.py  compare_estimator_modes.py  model_selection_grid.py  plot_precision_supports.py  posthoc_baseline.py
gem_lasso/: __init__.py  covariance.py  diagnostics.py  exceptions.py  graph.py  mixture.py  model_selection.py  simulation.py
tests/: test_benchmarks.py  test_covariance.py  test_examples.py  test_import.py  test_mixture.py  test_model_selection.py  test_simulation.py
