[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gem-lasso"
version = "0.1.0.dev0"
description = "Clean-room Python utilities for Gaussian mixture models with sparse precision structure."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["gaussian-mixture", "graphical-lasso", "precision-matrix", "clustering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
authors = [
  { name = "OpenAI Codex" },
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "scikit-learn>=1.0.2",
]

[project.optional-dependencies]
graph = [
  "networkx>=3.0",
]
examples = [
  "matplotlib>=3.8",
]
dev = [
  "build>=1.2",
  "matplotlib>=3.8",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["gem_lasso"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
exclude = [".pytest_cache", ".ruff_cache", ".uv-cache", ".venv", "build", "dist"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
